[project]
name = "mukitodo"
version = "0.1.0"
description = "命令行 Todo 应用"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "prompt-toolkit>=3.0.0",
    "sqlalchemy>=2.0.0",
    "typer>=0.9.0",
]

[project.scripts]
todo = "mukitodo.cli:app"

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
